--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOe7LBrZrUd0qzVrfC/o4BC",
+      "authorship_tag": "ABX9TyP5hpX85FArOW48oO4yxAQj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "pB-IMMhfvZSo"
       },
@@ -42,13 +42,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(\"asdf\")"
       ],
       "metadata": {
-        "id": "ZGdy9GPcwZ83"
+        "id": "ZGdy9GPcwZ83",
+        "outputId": "1186b37b-6321-418a-8fd6-c746ed4efc94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "asdf\n"
+          ]
+        }
+      ]
     }
   ]
 }
